@startuml
entity Patient {
  id : Long
  name : String
  firstName : String
  birthdate : Date
}

entity Condition {
  id : Long
  name : String
  description : String
}

entity Treatment {
  id : Long
  name : String
  description : String
  orderBy_id : Long
}

entity Room {
  id : Long
  number : String
}

entity Department {
  id : Long
  name : String
}

entity Appointment {
  id : Long
  startHour : DateTime
  status : String
}

entity Employee {
  id : Long
  name : String
  firstName : String
  email : String
  role : String
}

entity Doctor {
  speciality : String
  Accès complet aux dossiers
  Prescription de traitements
}

entity Nurse {
  level : String
  Accès en lecture aux dossiers
  Administration des traitements
}

entity Secretary {
  office : String
  Accès administratif
  Gestion des rendez-vous
}

Patient "1" -- "1" Room : OneToOne
Patient "1" -- "N" Condition : OneToMany
Patient "1" -- "N" Treatment : OneToMany
Condition "N" -- "N" Treatment : ManyToMany
Treatment "N" -- "1" Employee : ManyToOne
Room "N" -- "1" Service : ManyToOne
Service "1" -- "N" Employee : OneToMany

Employee <|-- Doctor : Héritage
Employee <|-- Nurse : Héritage
Employee <|-- Secretary : Héritage

Appointment "N" -- "1" Patient : ManyToOne
Appointment "N" -- "1" Doctor : ManyToOne
@enduml